--- a/config/config.html
+++ b/config/config.html
@@ -21,6 +21,22 @@
     <select ng-model="config.shell" ng-options="value for value in ['Default Shell', 'Bash', 'Powershell']"></select>
   </div>
 </div>
+
+<h3>Configuration file</h3>
+<div class="row-fluid">
+  <div class="span12">
+    <p class="help-text">
+      Insert file name of your configuration (default: .strider.yml)
+    </p>
+  </div>
+</div>
+<div class="row-fluid">
+  <div class="span6">
+    <input type="text" ng-model="config.filename" />
+  </div>
+</div>
+
+
 <h3>Environment</h3>
 <div class="row-fluid">
   <div class="span12">
